<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    android:orientation="vertical">

    <include
        android:id="@+id/include2"
        layout="@layout/fragment_menu_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:alwaysDrawnWithCache="true"
            android:duplicateParentState="false"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:overScrollMode="always">

            <EditText
                android:id="@+id/jalonId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/jalonTitre"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/entree_text"
                android:ems="10"
                android:enabled="true"
                android:gravity="start|center"
                android:hint="@string/titre"
                android:inputType="text"
                android:isScrollContainer="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textColorHighlight="#000000" />

            <EditText
                android:id="@+id/jalonDescription"
                style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/entree_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:textColor="#000000" />


            <Button
                android:id="@+id/jalonDateDebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:ems="10"
                android:hint="@string/ajouter_date_de_debut"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <TextView
                android:id="@+id/textDateDebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/entree_text"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/afficher_date_de_debut" />

            <Button
                android:id="@+id/jalonDateFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:ems="10"
                android:hint="@string/ajouter_date_de_fin"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF" />

            <TextView
                android:id="@+id/textDateFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/entree_text"
                android:gravity="center"
                android:text="@string/afficher_date_de_fin" />

            <Button
                android:id="@+id/btnTerminer"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/boutton_vert"
                android:text="@string/terminer"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>