<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <include
        android:id="@+id/include2"
        layout="@layout/fragment_menu_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/modifier_projet"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTitreProjetModifier"
        style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/entree_text"
        android:ems="10"
        android:enabled="true"
        android:gravity="start|center"
        android:hint="@string/titre"
        android:inputType="text"
        android:isScrollContainer="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHighlight="#000000" />

    <EditText
        android:id="@+id/etDescriptionProjetModifier"
        style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/entree_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnEnregistrerModificationProjet"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boutton_vert"
        android:text="@string/enregistrer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textSize="18dp" />

</LinearLayout>