<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.vue.vueTableau.VueTableauAjouter"
>

    <include
        android:id="@+id/menu_principale"
        layout="@layout/fragment_menu_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/entree_text"
        android:ems="10"
        android:hint="@string/titre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tableauTitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/projetTitre"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginBottom="156dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ajouter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boutton_vert"
        android:text="@string/ajouter"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="210dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/annuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/boutton_rouge"
        android:text="@string/annuler"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="210dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/ajouter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/nouveauTableauTitre"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/nouveau_tableau"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_principale"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
